Fix content overflow bug

--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,17 @@ body {
     height: auto; */
     background-color: #D0E4F5;
     font-family: 'Roboto', sans-serif;
+    overflow-x: hidden;
+}
+
+html {
+    overflow-x: hidden;
 }
 
 /* Main section */
 .grid-main {
     display: grid;
-    grid-template-columns: [one] 1fr [two] minmax(200px, 60vw) [three] 1fr [four];
+    grid-template-columns: [one] 1fr [two] 6fr [three] 1fr [four];
     grid-template-rows: [one] 100px [two] 300px [three] 300px [four] 700px [five] 100px [six];
     grid-template-areas: '. nav .'
                          '. current .'
@@ -91,8 +96,8 @@ body {
 }
 
 #search-form {
-    width: 400px;
-    padding-left: 25px;
+    grid-area: nav;
+
 }
 
 #location-search {
@@ -317,8 +322,8 @@ body {
 /* Phones */
 @media (max-width: 600px) {
     .grid-main {
-        grid-template-columns: [one] .25fr [two] 8fr [three] .25fr [four];
-        grid-template-rows: [one] 200px [two] 300px [three] 300px [four] 700px [five] 100px [six];
+        grid-template-columns: [one] .25fr [two] 12fr [three] .25fr [four];
+        grid-template-rows: [one] 200px [two] 150px [three] 300px [four] 1000px [five] 100px [six];
     }
 
     .hourly-body {
@@ -353,13 +358,15 @@ body {
 
     .logo {
         flex-direction: column-reverse;
-        justify-content: space-between;
+        justify-content: center;
+        align-content: center;
+        flex-wrap: wrap;
     }
 
 }
 
-/* Tablets */
-@media (max-width: 768px) {
+
+/* @media (max-width: 768px) {
     .grid-main {
         grid-template-columns: [one] 1fr [two] 80vw [three] 1fr [four];
     }
@@ -370,14 +377,14 @@ body {
 }
 
 
-/* desktops */
+
 @media (min-width: 992px) {
     .grid-main {
         grid-template-columns: [one] 1fr [two] minmax(700px, 6fr) [three] 1fr [four];
     }
-}
+} */
 
-/* Extra large devices */
+
 @media (min-width: 1201px) {
     .grid-main {
         grid-template-columns: [one] 1fr [two] 1000px [three] 1fr [four];
